[package]
name = "dojidoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.55"
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = { version = "0.23.0", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tui = { version = "0.17.0", default-features = false, features = ["crossterm", "serde"] }
