[package]
name = "tui-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
chrono = "0.4.19"
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
termion = "1.5.6"
tui = { version = "0.17.0", default-features = false, features = ['termion'] }

