[package]
name = "constantly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
env_logger = "0.9.0"
log = "0.4.14"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = "1.0.136"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }

architecture-lib = { path = "../architecture-lib" }